fixed after review #2